--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
         <body>
             <section>
+                <h1>Il nostro sito è attualmente in costruzione...</h1>
+                <p>Troverete i nostri progetti e molto altro ancora a questo stesso indirizzo tra poco.</p>
+            </section>
+
+            <section>
                 <h1>Chi siamo</h1>
 
                 <p>PAN associati srl è una società costituita da un gruppo multidisciplinare di professionisti fondata nel 2001 che opera nel campo della progettazione architettonica e del paesaggio, della pianificazione territoriale, della progettazione urbana ed ambientale.</p>
