--- a/4/index.html
+++ b/4/index.html
@@ -28,8 +28,8 @@
         <main>
             <h1 class="loading">Il nostro sito è attualmente<br>in costruzione</h1>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed mollis nunc. Etiam sed mauris at eros convallis convallis at sit amet elit. Donec ultrices iaculis erat, ut feugiat lorem sodales nec. Nullam ullamcorper sed augue eget elementum. Integer mattis, tortor vehicula suscipit eleifend, mauris libero placerat massa, ut luctus metus ex sed libero.</p>
-            <p>Sed lobortis nisi nec libero venenatis efficitur at a justo. Phasellus rhoncus sapien id augue scelerisque imperdiet.</p>
+            <p>Dal 2001, PAN Associati S.r.l. si distingue nel settore della progettazione architettonica, paesaggistica, e nella pianificazione territoriale e urbana. Con un team multidisciplinare di esperti, tra cui architetti, paesaggisti, agronomi, forestali e ingegneri, ci occupiamo di progetti di rigenerazione di spazi urbani, progettazione paesaggistica di infrastrutture, parchi e giardini, e riqualificazione ambientale e paesaggistica.</p>
+            <p>Restate in contatto in attesa del lancio del nostro nuovo sito, dove non vediamo l'ora di mostrarvi tutti i nostri progetti, testimonianza del nostro impegno per uno sviluppo sostenibile e un futuro più verde.</p>
         </main>
 
         <footer>
