--- a/404.html
+++ b/404.html
@@ -42,11 +42,9 @@
                 }
             </script>
         </header>
-
-        
 <!--main-->
         <main>
-            <section class="intro">
+            <section class="first">
                 <div class="jus-rig">
                     <h1>Il nostro sito è attualmente<br>in costruzione</h1>
                     <h2>Questa pagina non è ancora stata pubblicata, torna presto!</h2>
