--- a/index.html
+++ b/index.html
@@ -43,10 +43,20 @@
             </script>
         </header>
 
-        
+        <div class="intro">
+            <img class="hov" src="library/base/pan_associati.svg">
+
+            <div class="slider">
+                <div class="slides">
+                    <div class="slide"><img class="fil-gra" src="library/bibli/21.jpg" alt="Image 1"></div>
+                    <div class="slide"><img class="fil-gra" src="library/bibli/Natura_Vicenza-12.jpg" alt="Image 2"></div>
+                    <div class="slide"><img class="fil-gra" src="library/bibli/21.jpg" alt="Image 3"></div>
+                </div>
+            </div>
+        </div>
 <!--main-->
         <main>
-            <section class="intro">
+            <section>
                 <div>
                     <img class="fil-gra" src="library/bibli/Natura_Vicenza-12.jpg">
                     <p class="quote">Parco della Pace - Vicenza</p>
@@ -88,7 +98,7 @@
 <!--corps-->
             <section>
                 <div>
-                    <img class="fil-gra" src="library/bibli/DSC_0100.jpg">
+                    <img class="fil-gra" src="library/bibli/DSC_0100.JPG">
                     <p class="quote">Parco della Pace - Vicenza</p>
                 </div>
                 <div>
@@ -112,7 +122,7 @@
 
             <section>
                 <div>
-                    <img class="fil-gra" src="library/bibli/IMG_1303.jpg">
+                    <img class="fil-gra" src="library/bibli/IMG_1303.JPG>
                     <p class="quote">Parco della Pace - Vicenza</p>
                 </div>
                 <div>
@@ -136,7 +146,7 @@
 
             <section>
                 <div>
-                    <img class="fil-gra" src="library/bibli/DSCF2151.jpg">
+                    <img class="fil-gra" src="library/bibli/DSCF2151.JPG">
                     <p class="quote">Parco della Pace - Vicenza</p>
                 </div>
                 <div>
