--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <section>
                 <div>
-                    <img class="fil-gra" src="library/bibli/IMG_1303.JPG>
+                    <img class="fil-gra" src="library/bibli/IMG_1303.JPG">
                     <p class="quote">Parco della Pace - Vicenza</p>
                 </div>
                 <div>
