--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
     </head>
     <body>
         <header>
-            <div class="hh">
-            </div>
+            <a class="home" href="index"><img class="logo" src="library/base/pan_associati_nuovo.svg"></a>
             <div id="myLinks">
-                <a href="index">Index</a>
                 <a href="404">Chi siamo</a>
                 <a href="404">Progetti</a>
                 <a href="404">Contatti</a>
             </div>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">+</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><img class="burger" src="library/icons/burger.svg"></a>
 
             <script>
                 function myFunction() {
@@ -42,136 +40,98 @@
                 }
             </script>
         </header>
-
+<!--DIAPO-->
         <div class="intro">
-            <img class="hov" src="library/base/pan_associati.svg">
-
             <div class="slider">
                 <div class="slides">
-                    <div class="slide"><img class="fil-gra" src="library/bibli/21.jpg" alt="Image 1"></div>
+                    <div class="slide"><img class="fil-gra" src="library/bibli/DJI_0526.jpg" alt="Image 1"></div>
                     <div class="slide"><img class="fil-gra" src="library/bibli/Natura_Vicenza-12.jpg" alt="Image 2"></div>
                     <div class="slide"><img class="fil-gra" src="library/bibli/21.jpg" alt="Image 3"></div>
                 </div>
             </div>
         </div>
-<!--main-->
+<!--MAIN-->
         <main>
             <section>
                 <div>
                     <img class="fil-gra" src="library/bibli/Natura_Vicenza-12.jpg">
-                    <p class="quote">Parco della Pace - Vicenza</p>
                 </div>
-                <div>
+                <div class="txt">
                     <h1>Chi siamo</h1>
-                    <h2>Progetazzione<br>Architettura<br>e Natura</h2>
+                    <h2>Progetazzione<br>Architettura +<br>Natura</h2>
                     <p>PAN associati srl è una società costituita da un gruppo multidisciplinare di professionisti fondata nel 2001 che opera nel campo della progettazione architettonica e del paesaggio, della pianificazione territoriale, della progettazione urbana ed ambientale.</p>
                     <p>PAN Associati vanta un portfolio di servizi eseguiti che spazia dalla pianificazione urbana strategica a larga scala alla progettazione e realizzazione delle opere.</p>
                     <p>La nostra vocazione è quella di contribuire a un futuro sostenibile ricercando un nuovo rapporto dell’uomo con la città e il territorio basato sulla Natura.</p>
+                    <p class="dec"><a href="404">Scopri di <span>+</span></a></p>
                 </div>
             </section>
 
-            <p id="marged" class="quote">Parco della Pace - Vicenza</p>
-            <img class="fil-gra" src="library/bibli/Natura_Vicenza-5.jpg">
-
-            <section>
-                <div class="jus-rig">
+            <section class="grigio">
+                <div class="txt"  id="ali-rig">
                     <h1>Cosa facciamo</h1>
-                    <h2>Le principali aree di competenza e azione sono:</h2>
-                    <p>- parchi e giardini urbani;
-                    <br>- parchi territoriali e contesti naturalistici e paesaggistici di pregio;
-                    <br>- riqualificazione ecologico-paesaggistica del territorio e il recupero di aree degradate
-                    <br>- pianificazione e realizzazione di infrastrutture verdi;
-                    <br>- progettazione paesaggistica delle infrastrutture urbane e territoriali;
-                    <br>- forestazione urbana;
-                    <br>- conservazione e rinnovo di parchi e giardini storici;
-                    <br>- progettazione architettonica in particolare legata ai contesti paesaggistici e naturali.</p>
+                    <h2>La nostra area di competenza</h2>
                     <p>Riconosciamo il potenziale di questi spazi per migliorare la vita delle città, arricchire habitat ed ecosistemi, promuovere la biodiversità, erogare servizi ecosistemici urbani e territoriali, contribuire alla lotta contro i cambiamenti climatici utilizzando soluzioni basate sulla natura (NBS).</p>
                 </div>
                 <div>
                     <img class="fil-gra" src="library/bibli/Natura_Vicenza-34.jpg">
-                    <p class="quote">Parco della Pace - Vicenza</p>
                 </div>
             </section>
 
-            <p id="marged" class="quote">Parco della Pace - Vicenza</p>
-            <img class="fil-gra" src="library/bibli/DJI_0526.jpg">
-<!--corps-->
-            <section>
-                <div>
-                    <img class="fil-gra" src="library/bibli/DSC_0100.JPG">
-                    <p class="quote">Parco della Pace - Vicenza</p>
+            <section class="mono">
+                <div class="mySlides">
+                    <img class="fil-gra" id="illustration" src="library/news/Topscape-054.png">
+                    <p>Pubblicazione Parco della Pace- Paysage n° 53</p>
+                    <p class="dec"><a href="404">Scopri di <span>+</span></a></p>
                 </div>
-                <div>
-                    <h1>Rigenerazione<br>spazi urbani</h1>
-                    <p>Il nostro team si dedica a recuperare e risanare spazi degradati, trasformandoli in ambienti vivibili, sostenibili e apprezzati dalle comunità.</p>
-                    <a href="404">Leggi di <span>+</span></a>
+
+                <div class="mySlides" class="fil-gra">
+                    <img class="fil-gra" id="illustration" src="library/news/Topscape-054.png">
+                    <p>Pubblicazione Parco della Pace- Paysage n° 54</p>
+                    <p class="dec"><a href="404">Scopri di <span>+</span></a></p>
                 </div>
+
+                <div class="mySlides" class="fil-gra">
+                    <img class="fil-gra" id="illustration" src="library/news/Topscape-054.png">
+                    <p>Pubblicazione Parco della Pace- Paysage n° 55</p>
+                    <p class="dec"><a href="404">Scopri di <span>+</span></a></p>
+                </div>
+
+                <button class="nav-left" onclick="plusDivs(-1)">&#10094;</button>
+                <button class="nav-right" onclick="plusDivs(1)">&#10095;</button>
+
+                <script>
+                    var slideIndex = 1;
+                    showDivs(slideIndex);
+                    function plusDivs(n) {
+                        showDivs(slideIndex += n);
+                    }
+                    function showDivs(n) {
+                        var i;
+                        var x = document.getElementsByClassName("mySlides");
+                        if (n > x.length) {slideIndex = 1}
+                            if (n < 1) {slideIndex = x.length}
+                                for (i = 0; i < x.length; i++) {
+                                    x[i].style.display = "none";  
+                                }
+                                x[slideIndex-1].style.display = "block";  
+                            }
+                </script>
             </section>
 
-            <section>
-                <div class="jus-rig">
-                    <h1>Progetazione paesaggistica<br>di infrastrutture</h1>
-                    <p>Le infrastrutture possono essere delle grandi opportunità e devono essere parte di una progettazione paesaggistica e ingegneristica consapevole ed integrata.</p>
-                    <a href="404">Leggi di <span>+</span></a>
-                </div>
-                <div>
-                    <img class="fil-gra" src="library/bibli/2D3A9487.jpg">
-                    <p class="quote">Parco della Pace - Vicenza</p>
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <img class="fil-gra" src="library/bibli/IMG_1303.JPG">
-                    <p class="quote">Parco della Pace - Vicenza</p>
-                </div>
-                <div>
-                    <h1>Parchi e giardini</h1>
-                    <p>Progettiamo aree ecologicamente sane, che offrono bellezza e natura e opportunità ricreative ed educative.</p>
-                    <a href="404">Leggi di <span>+</span></a>
-                </div>
-            </section>
-
-            <section>
-                <div class="jus-rig">
-                    <h1>Riqualificazione ambientale<br>e paesaggistica</h1>
-                    <p>Il nostro processo di design considera l’ecosistema locale e usa avanzati criteri naturalistici e di ingegneria per realizzare un nuovo paesaggio efficiente e resiliente.</p>
-                    <a href="404">Leggi di <span>+</span></a>
-                </div>
-                <div>
-                    <img class="fil-gra" src="library/bibli/Drone_Vicenza-1.jpg">
-                    <p class="quote">Parco della Pace - Vicenza</p>
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <img class="fil-gra" src="library/bibli/DSCF2151.JPG">
-                    <p class="quote">Parco della Pace - Vicenza</p>
-                </div>
-                <div>
-                    <h1>Architettura</h1>
-                    <p>Promuoviamo un’architettura integrata col paesaggio naturale e urbano, rispettosa dei fruitori e della collettività.</p>
-                    <a href="404">Leggi di <span>+</span></a>
-                </div>
-            </section>
-
-            <p id="marged" class="quote">Parco della Pace - Vicenza</p>
-            <img  class="fil-gra" src="library/bibli/0B3A6788.jpg">
-<!--rouge-->
             <section class="rosso">
                 <div>
+                    <img  class="fil-gra" src="library/bibli/0B3A6788.jpg">
                 </div>
-                <div>
-                    <h1>Collaborazioni e lavori</h1>
+                <div class="txt">
+                    <h1>Collaborazioni</h1>
                     <h2>Hai qualcosa in&nbsp;<span>+</span>?<br>Lavora con noi!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et purus et leo iaculis cursus vel nec tortor. Quisque consequat lacinia justo sit amet placerat. Nam sodales pharetra nulla et molestie. Integer vehicula neque in augue vestibulum, sit amet ultrices ligula tempus. Aenean velit orci, aliquam et arcu ac, vehicula sagittis ligula. Integer pellentesque mi non risus sodales eleifend.</p>
                     <p>Donec dapibus ipsum sit amet dolor sagittis pretium. Nullam nec dui posuere, malesuada elit varius, finibus nunc. Aliquam placerat quam quis finibus ultrices. Morbi ultrices felis id sollicitudin egestas. Nunc feugiat urna id enim ultrices molestie. Phasellus tincidunt tellus massa, in luctus massa iaculis ut.</p>
                 </div>
             </section>
-<!--noir-->
+
             <section>
-                <div class="jus-rig">
+                <div class="txt" id="ali-rig">
                     <h1>Contatti</h1>
                     <h2>Contattaci! Seguici!</h2>
                     <p>Integer condimentum, enim non tristique vulputate, sapien mi pretium orci, iaculis gravida nisl lectus ut odio. Pellentesque viverra, odio sed imperdiet imperdiet, lacus nulla semper erat, ac congue sapien massa porttitor lacus. Vestibulum sed augue sed lacus condimentum vehicula.</p>
@@ -179,12 +139,12 @@
                     <a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg"><img class="soc-ico" src="library/icons/youtube.svg"></a>
                     <a href="https://it.linkedin.com/company/pan-associati"><img class="soc-ico" src="library/icons/linkedin.svg"></a></p>
                 </div>
-                <div class="fil-gra">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.9154298443073!2d9.227060476602672!3d45.51178103026229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c76cb54d5f97%3A0xe5e7c5305b456d6b!2sVia%20Don%20Carlo%20Porro%2C%206%2C%2020128%20Milano%20MI%2C%20Italie!5e0!3m2!1sfr!2sbe!4v1706871819456!5m2!1sfr!2sbe" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="fil-gra" id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.9154298443073!2d9.227060476602672!3d45.51178103026229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c76cb54d5f97%3A0xe5e7c5305b456d6b!2sVia%20Don%20Carlo%20Porro%2C%206%2C%2020128%20Milano%20MI%2C%20Italie!5e0!3m2!1sfr!2sbe!4v1706871819456!5m2!1sfr!2sbe" width="100%"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
         </main>
-<!--footer-->
+<!--FOOTER-->
         <footer>
             <section>
                 <p>Via Don Carlo Porro 6 - 20128 Milano (MI) - Italia
