--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
 <!--MAIN-->
         <main>
             <section>
-                <div>
-                    <img class="fil-gra" src="library/bibli/Natura_Vicenza-12.jpg">
+                <div class="fil-gra">
+                    <div class="container">
+                        <div class="overlay">
+                            <p class="quote">Stuff shown on hover</p>
+                            <a href="#">Scopri di <span>+</span></a>
+                        </div>
+                        <img class="thumbnailed" src="library/bibli/21.jpg">
+                    </div>
                 </div>
                 <div class="txt">
                     <h1>Chi siamo</h1>
@@ -72,8 +78,14 @@
                     <h2>La nostra area di competenza</h2>
                     <p>Riconosciamo il potenziale di questi spazi per migliorare la vita delle città, arricchire habitat ed ecosistemi, promuovere la biodiversità, erogare servizi ecosistemici urbani e territoriali, contribuire alla lotta contro i cambiamenti climatici utilizzando soluzioni basate sulla natura (NBS).</p>
                 </div>
-                <div>
-                    <img class="fil-gra" src="library/bibli/Natura_Vicenza-34.jpg">
+                <div class="fil-gra">
+                    <div class="container">
+                        <div class="overlay">
+                            <p class="quote">Stuff shown on hover</p>
+                            <a href="#">Scopri di <span>+</span></a>
+                        </div>
+                        <img class="thumbnailed" src="library/bibli/Natura_Vicenza-34.jpg">
+                    </div>
                 </div>
             </section>
 
@@ -119,8 +131,14 @@
             </section>
 
             <section class="rosso">
-                <div>
-                    <img  class="fil-gra" src="library/bibli/0B3A6788.jpg">
+                <div class="fil-gra">
+                    <div class="container">
+                        <div class="overlay">
+                            <p class="quote">Stuff shown on hover</p>
+                            <a href="#">Scopri di <span>+</span></a>
+                        </div>
+                        <img class="thumbnailed" src="library/bibli/0B3A6788.jpg">
+                    </div>
                 </div>
                 <div class="txt">
                     <h1>Collaborazioni</h1>
