--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 <!--MAIN-->
         <main>
-            <section>
+            <section id="rev">
                 <div class="fil-gra">
                     <div class="container">
                         <div class="overlay">
@@ -77,6 +77,12 @@
                     <h1>Cosa facciamo</h1>
                     <h2>La nostra area di competenza</h2>
                     <p>Riconosciamo il potenziale di questi spazi per migliorare la vita delle città, arricchire habitat ed ecosistemi, promuovere la biodiversità, erogare servizi ecosistemici urbani e territoriali, contribuire alla lotta contro i cambiamenti climatici utilizzando soluzioni basate sulla natura (NBS).</p>
+
+                    <p class="dec"><a href="404">Rigenerazione spazi urbani &nearr;</a></p>
+                    <p class="dec"><a href="404">Progetazione paeggistica di infrastrutture &nearr;</a></p>
+                    <p class="dec"><a href="404">Parchi e giardini &nearr;</a></p>
+                    <p class="dec"><a href="404">Riqualificazione ambientale e paeggistica &nearr;</a></p>
+                    <p class="dec"><a href="404">Architettura &nearr;</a></p>
                 </div>
                 <div class="fil-gra">
                     <div class="container">
@@ -130,7 +136,7 @@
                 </script>
             </section>
 
-            <section class="rosso">
+            <section class="rosso"  id="rev">
                 <div class="fil-gra">
                     <div class="container">
                         <div class="overlay">
