--- a/404.html
+++ b/404.html
@@ -21,15 +21,13 @@
     </head>
     <body>
         <header>
-            <div class="hh"></div>
-
+            <a class="home" href="index"><img class="logo" src="library/base/pan_associati_nuovo.svg"></a>
             <div id="myLinks">
-                <a href="index">Index</a>
                 <a href="404">Chi siamo</a>
                 <a href="404">Progetti</a>
                 <a href="404">Contatti</a>
             </div>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">+</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><img class="burger" src="library/icons/burger.svg"></a>
 
             <script>
                 function myFunction() {
@@ -43,35 +41,47 @@
             </script>
         </header>
 <!--main-->
+
+
         <main>
-            <section class="first">
-                <div class="jus-rig">
+            <section class="grigio">
+                <div class="txt"  id="ali-rig">
                     <h1>Il nostro sito è attualmente<br>in costruzione</h1>
                     <h2>Questa pagina non è ancora stata pubblicata, torna presto!</h2>
                     <p>Non vediamo l'ora di mostrarvi tutti i nostri progetti, testimonianza del nostro impegno per uno sviluppo sostenibile e un futuro più verde. Restate in contatto in attesa del lancio del di questa pagina.</p>
                     <p>Dal 2001, PAN Associati S.r.l. si distingue nel settore della progettazione architettonica, paesaggistica, e nella pianificazione territoriale e urbana. Con un team multidisciplinare di esperti, tra cui architetti, paesaggisti, agronomi, forestali e ingegneri, ci occupiamo di progetti di rigenerazione di spazi urbani, progettazione paesaggistica di infrastrutture, parchi e giardini, e riqualificazione ambientale e paesaggistica.</p>
                 </div>
-                <div>
-                    <a href="index">Torna all'index &#8599;</a>
+                <div class="fil-gra">
+                    <div class="container">
+                        <div class="overlay">
+                            <p class="quote">Stuff shown on hover</p>
+                            <a href="#">Scopri di <span>+</span></a>
+                        </div>
+                        <img class="thumbnailed" src="library/bibli/Natura_Vicenza-34.jpg">
+                    </div>
                 </div>
             </section>
 
-            <p id="marged" class="quote">Parco della Pace - Vicenza</p>
-            <img  class="fil-gra" src="library/bibli/0B3A6788.jpg">
-<!--rouge-->
-            <section class="rosso">
-                <div>
+            <section class="rosso"  id="rev">
+                <div class="fil-gra">
+                    <div class="container">
+                        <div class="overlay">
+                            <p class="quote">Stuff shown on hover</p>
+                            <a href="#">Scopri di <span>+</span></a>
+                        </div>
+                        <img class="thumbnailed" src="library/bibli/0B3A6788.jpg">
+                    </div>
                 </div>
-                <div>
-                    <h1>Collaborazioni e lavori</h1>
+                <div class="txt">
+                    <h1>Collaborazioni</h1>
                     <h2>Hai qualcosa in&nbsp;<span>+</span>?<br>Lavora con noi!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et purus et leo iaculis cursus vel nec tortor. Quisque consequat lacinia justo sit amet placerat. Nam sodales pharetra nulla et molestie. Integer vehicula neque in augue vestibulum, sit amet ultrices ligula tempus. Aenean velit orci, aliquam et arcu ac, vehicula sagittis ligula. Integer pellentesque mi non risus sodales eleifend.</p>
                     <p>Donec dapibus ipsum sit amet dolor sagittis pretium. Nullam nec dui posuere, malesuada elit varius, finibus nunc. Aliquam placerat quam quis finibus ultrices. Morbi ultrices felis id sollicitudin egestas. Nunc feugiat urna id enim ultrices molestie. Phasellus tincidunt tellus massa, in luctus massa iaculis ut.</p>
                 </div>
             </section>
-<!--noir-->
+
             <section>
-                <div class="jus-rig">
+                <div class="txt" id="ali-rig">
                     <h1>Contatti</h1>
                     <h2>Contattaci! Seguici!</h2>
                     <p>Integer condimentum, enim non tristique vulputate, sapien mi pretium orci, iaculis gravida nisl lectus ut odio. Pellentesque viverra, odio sed imperdiet imperdiet, lacus nulla semper erat, ac congue sapien massa porttitor lacus. Vestibulum sed augue sed lacus condimentum vehicula.</p>
@@ -79,8 +89,8 @@
                     <a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg"><img class="soc-ico" src="library/icons/youtube.svg"></a>
                     <a href="https://it.linkedin.com/company/pan-associati"><img class="soc-ico" src="library/icons/linkedin.svg"></a></p>
                 </div>
-                <div class="fil-gra">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.9154298443073!2d9.227060476602672!3d45.51178103026229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c76cb54d5f97%3A0xe5e7c5305b456d6b!2sVia%20Don%20Carlo%20Porro%2C%206%2C%2020128%20Milano%20MI%2C%20Italie!5e0!3m2!1sfr!2sbe!4v1706871819456!5m2!1sfr!2sbe" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="fil-gra" id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.9154298443073!2d9.227060476602672!3d45.51178103026229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c76cb54d5f97%3A0xe5e7c5305b456d6b!2sVia%20Don%20Carlo%20Porro%2C%206%2C%2020128%20Milano%20MI%2C%20Italie!5e0!3m2!1sfr!2sbe!4v1706871819456!5m2!1sfr!2sbe" width="100%"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
         </main>
