--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!--#1-->
   <section class="split" id="responsive-reverse">
     <div>
-      <img src="library/home/pan-h1.jpg">
+      <img src="library/home/pan-h1.JPG">
     </div>
     <div class="text-elements">
       <div class="big-separator"></div>
@@ -107,7 +107,7 @@
     <div class="slider" id="slider2">
       <div class="slides">
         <div class="slide">
-          <img src="library/home/pan-h2.jpg" alt="Image 1">
+          <img src="library/home/pan-h2.JPG" alt="Image 1">
             <div class="overlay">
                 <div class="quote">
                   <p>Rigenerazione spazi urbani</p>
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="slide">
-            <img src="library/home/pan-h5.jpg" alt="Image 2">
+            <img src="library/home/pan-h5.JPG" alt="Image 2">
             <div class="overlay">
                 <div class="quote">
                   <p>Riqualificazione ambientale e paeggistica</p>
@@ -147,7 +147,7 @@
             </div>
         </div>
         <div class="slide">
-            <img src="library/home/pan-h6.jpg" alt="Image 3">
+            <img src="library/home/pan-h6.JPG" alt="Image 3">
             <div class="overlay">
                 <div class="quote">
                   <p>Architettura</p>
