--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
       <h2>La nostra area di competenza</h2>
       <p>Riconosciamo il potenziale di questi spazi per migliorare la vita delle città, arricchire habitat ed ecosistemi, promuovere la biodiversità, erogare servizi ecosistemici urbani e territoriali, contribuire alla lotta contro i cambiamenti climatici utilizzando soluzioni basate sulla natura (NBS).</p>
       <div class="small-separator"></div>
-      <p><a class="classic-link" href="#">Rigenerazione spazi urbani &nearr;</a></p>
-      <p><a class="classic-link" href="#">Progetazione paeggistica di infrastrutture &nearr;</a></p>
-      <p><a class="classic-link" href="#">Parchi e giardini &nearr;</a></p>
-      <p><a class="classic-link" href="#">Riqualificazione ambientale e paeggistica &nearr;</a></p>
-      <p><a class="classic-link" href="#">Architettura &nearr;</a></p>
+      <p><a class="inline-link" href="#">Rigenerazione spazi urbani &nearr;</a>
+      <a class="inline-link" href="#">Progetazione paeggistica di infrastrutture &nearr;</a>
+      <a class="inline-link" href="#">Parchi e giardini &nearr;</a>
+      <a class="inline-link" href="#">Riqualificazione ambientale e paeggistica &nearr;</a>
+      <a class="inline-link" href="#">Architettura &nearr;</a></p>
     </div>
     <div class="slider" id="slider2">
       <div class="slides">
