--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="slider" id="slider1">
       <div class="slides">
         <div class="slide">
-          <img src="library/home/pan-h2.jpg" alt="Image 1">
+          <img src="library/home/pan-h2.JPG" alt="Image 1">
             <div class="overlay">
                 <div class="quote">
                   <p>Parco della Pace - Vicenza</p>
