--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <a href="#">Architettura</a>
     </div>
   </div>
+  <a href="#">Contatti</a>
 </div>
 
 <main>
@@ -203,18 +204,26 @@
       <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
       <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
       <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
-      <a class="image-link" href="#"><img class="icon" src="elements/facebook.svg"></a>
-      <a class="image-link" href="#"><img class="icon" src="elements/youtube.svg"></a>
-      <a class="image-link" href="#"><img class="icon" src="elements/linkedin.svg"></a>
-      <p>PAN Associati s.r.l.
-      <br>© Copyright 2024
-      <br><a class="text-link" href="#">Privacy e Cookie Policy</a></p>
+      <a href="https://www.facebook.com/panassociati/"><img class="icon" src="elements/facebook.svg"></a>
+      <a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg"><img class="icon" src="elements/youtube.svg"></a>
+      <a href="https://it.linkedin.com/company/pan-associati"><img class="icon" src="elements/linkedin.svg"></a>
     </div>
     <div id="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.9154298443073!2d9.227060476602672!3d45.51178103026229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c76cb54d5f97%3A0xe5e7c5305b456d6b!2sVia%20Don%20Carlo%20Porro%2C%206%2C%2020128%20Milano%20MI%2C%20Italie!5e0!3m2!1sfr!2sbe!4v1706871819456!5m2!1sfr!2sbe" width="100%"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
 </main>
+
+<footer>
+  <p>Via Don Carlo Porro 6 - 20128 Milano (MI) - Italia</p>
+  <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
+  <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
+  <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
+
+  <p><a href="https://www.facebook.com/panassociati/">Facebook</a> | <a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a> | <a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
+
+  <p>PAN Associati s.r.l. | © Copyright 2024 | <a class="text-link" href="#">Privacy e Cookie Policy</a></p>
+</footer>
 
 <script>
 // HEADER MENU NAV
