--- a/it/index.html
+++ b/it/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PA+N Associati</title>
   <link rel="stylesheet" href="../styles.css">
-  <link rel="shortcut icon" href="elements/icone.ico">
+  <link rel="shortcut icon" href="../elements/icone.ico">
 </head>
 <body>
 
