--- a/en/index.html
+++ b/en/index.html
@@ -28,7 +28,8 @@
     </label>
   </div>
   <div class="desktop-menu">
-    <a href="#">Who we are</a>
+    <a href="#">Studio</a>
+    <a href="#">News</a>
     <a href="#" onclick="toggleMenu('servicesMenu')">Projects</a>
     <ul id="servicesMenu" class="dropdown-menu">
       <li><a href="#">All projects</a></li>
@@ -44,7 +45,8 @@
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="#">Who we are</a>
+  <a href="#">Studio</a>
+  <a href="#">News</a>
   <div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Projects</a>
     <div id="subNavLinks" class="sub-nav-links">
