--- a/it/index.html
+++ b/it/index.html
@@ -28,7 +28,8 @@
     </label>
   </div>
   <div class="desktop-menu">
-    <a href="#">Chi siamo</a>
+    <a href="#">Studio</a>
+    <a href="#">News</a>
     <a href="#" onclick="toggleMenu('servicesMenu')">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
       <li><a href="#">Tutti i progetti</a></li>
@@ -44,7 +45,8 @@
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="#">Chi Siamo</a>
+  <a href="#">Studio</a>
+  <a href="#">News</a>
   <div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
@@ -213,7 +215,7 @@
     <div class="text-elements">
       <div class="big-separator"></div>
       <h1>Collaborazioni</h1>
-      <h2>Hai qualcosa in&nbsp;<span>+</span>?<br>Lavora con noi!</h2>
+      <h2>Hai qualcosa in&nbsp;+&nbsp;?<br>Lavora con noi!</h2>
       <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
       <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
       <p>Scopri come la tua visione può contribuire a plasmare ambienti memorabili e unisciti a noi in questa entusiasmante avventura. Visita la nostra sezione 'Lavora con noi' per saperne di più e inviaci la tua candidatura.</p>
