--- a/it/index.html
+++ b/it/index.html
@@ -6,6 +6,7 @@
   <title>PA+N Associati</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="shortcut icon" href="../elements/icone.ico">
+  <!--<script>window.location.href = "./it/index.html";</script>-->
 </head>
 <body>
 
