--- a/it/index.html
+++ b/it/index.html
@@ -16,7 +16,7 @@
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
+  <a href="it/index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch">
     <a href="../en/index">EN</a>&nbsp;&nbsp;|&nbsp;
