--- a/en/index.html
+++ b/en/index.html
@@ -15,7 +15,7 @@
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="en/index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
+  <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch">
     <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
