--- a/it/index.html
+++ b/it/index.html
@@ -6,7 +6,7 @@
   <title>PA+N Associati</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="shortcut icon" href="../elements/icone.ico">
-  <script>window.location.href = "./it/index.html";</script>
+  <script>window.location.href = "it/index.html";</script>
 </head>
 <body>
 
@@ -16,7 +16,7 @@
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="it/index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
+  <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch">
     <a href="../en/index">EN</a>&nbsp;&nbsp;|&nbsp;
