--- a/en/index.html
+++ b/en/index.html
@@ -145,12 +145,12 @@
       <p>Through a multidisciplinary approach, our activity extends to both the public and private sectors, offering a range of services that covers all phases of design, construction management and safety coordination, both during the design and execution phases.</p>
       <p>We also offer specialist consultancy in the environmental and landscape sector, including feasibility studies, agronomic, botanical and forestry analyses, urban planning analyzes and studies, checks and environmental studies for the authorization of plans and projects.</p>
       <p>In our creative process, we pay attention to every aspect of the local ecosystem, aiming to develop functional and resilient landscapes.</p>
-      <div class="small-separator"></div>
+      <!--<div class="small-separator"></div>
       <p><a class="hermit-link" href="#">Regeneration of urban spaces &nearr;</a>
       <br><a class="hermit-link" href="#">Parks and gardens &nearr;</a>
       <br><a class="hermit-link" href="#">Environmental and landscape redevelopment &nearr;</a>
       <br><a class="hermit-link" href="#">Environmental insertion of infrastructures &nearr;</a>
-      <br><a class="hermit-link" href="#">Architecture &nearr;</a></p>
+      <br><a class="hermit-link" href="#">Architecture &nearr;</a></p>-->
     </div>
     <div class="slider" id="slider2">
       <div class="slides">
