--- a/it/index.html
+++ b/it/index.html
@@ -145,12 +145,12 @@
       <p>Attraverso un approccio multidisciplinare, la nostra attività si estende sia al settore pubblico che a quello privato, offrendo una gamma di servizi che copre tutte le fasi della progettazione, direzione lavori e coordinamento della sicurezza, sia durante la fase di progettazione che di esecuzione.</p>
       <p>Offriamo inoltre consulenze specialistiche nel settore ambientale e paesaggistico, tra cui studi di fattibilità, analisi agronomiche, botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali per l’autorizzazione di piani e progetti.
       <p>Nel nostro processo creativo, prestiamo attenzione a ogni aspetto dell'ecosistema locale, mirando a sviluppare paesaggi funzionali e resilienti.</p>
-      <div class="small-separator"></div>
+      <!--<div class="small-separator"></div>
       <p><a class="hermit-link" href="#">Rigenerazione spazi urbani &nearr;</a>
       <br><a class="hermit-link" href="#">Parchi e giardini &nearr;</a>
       <br><a class="hermit-link" href="#">Riqualificazione ambientale e paesaggistica &nearr;</a>
       <br><a class="hermit-link" href="#">Inserimento ambientale di infrastrutture &nearr;</a>
-      <br><a class="hermit-link" href="#">Architettura &nearr;</a></p>
+      <br><a class="hermit-link" href="#">Architettura &nearr;</a></p>-->
     </div>
     <div class="slider" id="slider2">
       <div class="slides">
