--- a/it/index.html
+++ b/it/index.html
@@ -229,16 +229,16 @@
   <h2>News</h2>
     <div class="footer-top">
         <div class="column">
-            <h1>11.01.2024</h1>
+            <h1>Pubblicazione</h1>
             <a class="hermit-link" href="#">Parco della Pace - Paysage n° 53 &nearr;</a>
         </div>
         <div class="column">
-            <h1>11.01.2024</h1>
-            <a class="hermit-link" href="#">Parco della Pace - Paysage n° 53 &nearr;</a>
+            <h1>Pubblicazione4</h1>
+            <a class="hermit-link" href="#">Parco della Pace- Rivista Indusstria delle costruzioni n°493 &nearr;</a>
         </div>
         <div class="column">
-            <h1>11.01.2024</h1>
-            <a class="hermit-link" href="#">Parco della Pace - Paysage n° 53 &nearr;</a>
+            <h1>Pubblicazione</h1>
+            <a class="hermit-link" href="#">Parco della Pace - Paysage n° 46 &nearr;</a>
         </div>
     </div>
 
