--- a/it/index.html
+++ b/it/index.html
@@ -233,7 +233,7 @@
             <a class="hermit-link" href="#">Parco della Pace - Paysage n° 53 &nearr;</a>
         </div>
         <div class="column">
-            <h1>Pubblicazione4</h1>
+            <h1>Pubblicazione</h1>
             <a class="hermit-link" href="#">Parco della Pace- Rivista Indusstria delle costruzioni n°493 &nearr;</a>
         </div>
         <div class="column">
