--- a/en/index.html
+++ b/en/index.html
@@ -19,7 +19,7 @@
   
   <div class="lang-switch">
     <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
-    <a href="../it/404">IT</a>
+    <a href="../it/index">IT</a>
   </div>
   <div class="DarkModeButton">
     <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
