--- a/it/index.html
+++ b/it/index.html
@@ -18,7 +18,7 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch">
-    <a href="../en/404">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../en/index">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton">
