--- a/it/index.html
+++ b/it/index.html
@@ -144,10 +144,10 @@
       <p>Offriamo inoltre consulenze specialistiche nel settore ambientale e paesaggistico, tra cui studi di fattibilità, analisi agronomiche, botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali per l’autorizzazione di piani e progetti.
       <p>Nel nostro processo creativo, prestiamo attenzione a ogni aspetto dell'ecosistema locale, mirando a sviluppare paesaggi funzionali e resilienti.</p>
       <div class="big-separator"></div>
-      <a class="classic-link" href="404">Rigenerazione&nbsp;spazi&nbsp;urbani&nbsp;&nearr;</a>
-      <a class="classic-link" href="404">Parchi&nbsp;e&nbsp;giardini&nbsp;&nearr;</a>
-      <a class="classic-link" href="404">Riqualificazione&nbsp;ambientale&nbsp;e&nbsp;paesaggistica&nbsp;&nearr;</a>
-      <a class="classic-link" href="404">Inserimento&nbsp;ambientale&nbsp;di&nbsp;infrastrutture&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Rigenerazione spazi urbani&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Parchi e giardini&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Riqualificazione ambientale e paesaggistica&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Inserimento ambientale di infrastrutture&nbsp;&nearr;</a>
       <a class="classic-link" href="404">Architettura&nbsp;&nearr;</a>
     </div>
     <div class="slider" id="slider2">
@@ -258,7 +258,7 @@
         </div>
         <div class="column">
             <h1>Socials</h1>
-            <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
+            <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a><br>&nbsp;<br>&nbsp;</p>
         </div>
     </div>
 
