--- a/en/404.html
+++ b/en/404.html
@@ -17,11 +17,11 @@
   </div>
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
-  <div class="lang-switch">
+  <div class="lang-switch" id="LS1">
     <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="../it/404">IT</a>
   </div>
-  <div class="DarkModeButton">
+  <div class="DarkModeButton" id="DMB1">
     <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
     <label for="darkModeToggle" class="darkModeLabel">
     <div class="darkModeSlider"></div>
@@ -39,7 +39,7 @@
       <li><a href="404">Environmental insertion of infrastructures</a></li>
       <li><a href="404">Architecture</a></li>
     </ul>
-    <a href="404">Contacts</a>
+    <a href="404">Contact</a>
   </div>
 </header>
 
@@ -59,6 +59,16 @@
     </div>
   </div>
   <a href="404">Contact</a>
+  <div class="lang-switch" id="LS2">
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../it/404">IT</a>
+  </div>
+  <div class="DarkModeButton" id="DMB2">
+    <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
+    <label for="darkModeToggle" class="darkModeLabel">
+    <div class="darkModeSlider"></div>
+    </label>
+  </div>
 </div>
 
 <main>
