--- a/it/privacy.html
+++ b/it/privacy.html
@@ -17,11 +17,11 @@
   </div>
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
-  <div class="lang-switch">
+  <div class="lang-switch" id="LS1">
     <a href="../en/privacy">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
-  <div class="DarkModeButton">
+  <div class="DarkModeButton" id="DMB1">
     <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
     <label for="darkModeToggle" class="darkModeLabel">
     <div class="darkModeSlider"></div>
@@ -59,6 +59,16 @@
     </div>
   </div>
   <a href="404">Contatti</a>
+  <div class="lang-switch" id="LS2">
+    <a href="../en/privacy">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">IT</a>
+  </div>
+  <div class="DarkModeButton" id="DMB2">
+    <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
+    <label for="darkModeToggle" class="darkModeLabel">
+    <div class="darkModeSlider"></div>
+    </label>
+  </div>
 </div>
 
 <main>
