--- a/it/contatti.html
+++ b/it/contatti.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +29,8 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
-    <a href="../it/privacy">IT</a>
+    <a href="../en/contact">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
     <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
@@ -41,16 +41,16 @@
   <div class="desktop-menu">
     <a href="404">Studio</a>
     <a href="404">News</a>
-    <a href="#" onclick="toggleMenu('servicesMenu', event);">Projects</a>
+    <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
-      <li><a href="404">All projects</a></li>
-      <li><a href="404">Regeneration of urban spaces</a></li>
-      <li><a href="404">Parks and gardens</a></li>
-      <li><a href="404">Environmental and landscape redevelopment</a></li>
-      <li><a href="404">Environmental insertion of infrastructures</a></li>
-      <li><a href="404">Architecture</a></li>
+      <li><a href="404">Tutti i progetti</a></li>
+      <li><a href="404">Rigenerazione spazi urbani</a></li>
+      <li><a href="404">Parchi e giardini</a></li>
+      <li><a href="404">Riqualificazione ambientale e paesaggistica</a></li>
+      <li><a href="404">Inserimento ambientale di infrastrutture</a></li>
+      <li><a href="404">Architettura</a></li>
     </ul>
-    <a href="404">Contact</a>
+    <a href="contatti">Contatti</a>
   </div>
 </header>
 
@@ -59,20 +59,20 @@
   <a href="404">Studio</a>
   <a href="404">News</a>
   <div class="sub-links">
-    <a href="#" onclick="toggleSubNav()">Projects</a>
+    <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
-      <a href="404">All projects</a>
-      <a href="404">Regeneration of urban spaces</a>
-      <a href="404">Parks and gardens</a>
-      <a href="404">Environmental and landscape redevelopment</a>
-      <a href="404">Environmental insertion of infrastructures</a>
-      <a href="404">Architecture</a>
+      <a href="404">Tutti i progetti</a>
+      <a href="404">Rigenerazione spazi urbani</a>
+      <a href="404">Parchi e giardini</a>
+      <a href="404">Riqualificazione ambientale e paesaggistica</a>
+      <a href="404">Inserimento ambientale di infrastrutture</a>
+      <a href="404">Architettura</a>
     </div>
   </div>
-  <a href="404">Contact</a>
+  <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
-    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
-    <a href="../it/privacy">IT</a>
+    <a href="../en/contact">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
     <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
@@ -84,38 +84,27 @@
 </div>
 
 <main>
-  <section class="mono-404">
+  <section class="split" id="responsive-reverse">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.9156165915747!2d9.227060476800993!3d45.511777271074756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c7134b329775%3A0x4866f01e1b2e8992!2sPan%20Associati%20S.R.L.!5e0!3m2!1sfr!2sbe!4v1710417446020!5m2!1sfr!2sbe" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="text-elements">
-      <h1>Privacy and Cookie Policy</h1>
-      <h2>Information</h2>
-      <p>Thank you for visiting panassociati.net. We respect your privacy and are committed to protecting any information you may provide while using our website.</p>
-      <p>Collection and use of information:
-      <br>We do not collect any personal information from visitors to our website. You can browse our site anonymously without providing any personal details.</p>
-      <p>Use of cookies:
-      <br>We do not use cookies or other tracking technologies on our website.</p>
-      <p>Links to third-party sites:
-      <br>Our website may contain links to third party websites for your convenience or reference. We are not responsible for the privacy policies or practices of these websites.</p>
-      <p>Changes to this privacy policy:
-      <br>We reserve the right to update or change our privacy policy at any time. Any changes will be published on this page.</p>
-      <p>Contact us:
-      <br>If you have any questions about our privacy policy, please contact us at the following address: <a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>.</p>
-      <div class="big-separator"></div>
-      <a href="index" class="classic-link">Back to home</a>
+      <h1>Lorem ipsum</h1>
+      <h2>Dolor sit amet</h2>
+      <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </section>
 </main>
 
 <footer>
   <div class="big-separator"></div>
-  <h2>Contact</h2>
+  <h2>Contatti</h2>
 
     <div class="footer-bottom">
         <div class="column">
-            <h1>Office</h1>
+            <h1>Sede</h1>
             <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a></p>
         </div>
         <div class="column">
-            <h1>Infos</h1>
+            <h1>Dettagli</h1>
             <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
             <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
             <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
