--- a/en/index.html
+++ b/en/index.html
@@ -6,6 +6,17 @@
   <title>PA+N Associati</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="shortcut icon" href="../elements/icone.ico">
+
+  <meta name="author" content="PA+N Associati"> 
+  <meta name="description" content="La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.">
+  <meta name="keywords" content="progetazzione, architettura, natura, rigenerazione, spazi, urbani, parchi, giardini, riqualificazione, ambientale, paeggistica, inserimento, infrastrutture">
+  <link rel="canonical" href="https://www.panassociati.net/it/index.html">
+  <meta name="robots" content="index,follow">
+  <meta property="og:title" content="PA+N Associati | Progetazzione Architettura + Natura">
+  <meta property="og:description" content="La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.">
+  <meta property="og:image" content="../elements/panassociati-thumbnail.jpg">
+  <meta property="og:url" content="https://www.panassociati.net">
+  <meta property="og:type" content="website">
 </head>
 <body>
 
