--- a/it/index.html
+++ b/it/index.html
@@ -50,7 +50,7 @@
       <li><a href="404">Inserimento ambientale di infrastrutture</a></li>
       <li><a href="404">Architettura</a></li>
     </ul>
-    <a href="404">Contatti</a>
+    <a href="contatti">Contatti</a>
   </div>
 </header>
 
@@ -69,7 +69,7 @@
       <a href="404">Architettura</a>
     </div>
   </div>
-  <a href="404">Contatti</a>
+  <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
     <a href="../en/index">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
