--- a/en/index.html
+++ b/en/index.html
@@ -50,7 +50,7 @@
       <li><a href="404">Environmental insertion of infrastructures</a></li>
       <li><a href="404">Architecture</a></li>
     </ul>
-    <a href="404">Contact</a>
+    <a href="contact">Contact</a>
   </div>
 </header>
 
@@ -69,7 +69,7 @@
       <a href="404">Architecture</a>
     </div>
   </div>
-  <a href="404">Contact</a>
+  <a href="contact">Contact</a>
   <div class="lang-switch" id="LS2">
     <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="../it/index">IT</a>
