--- a/en/privacy.html
+++ b/en/privacy.html
@@ -50,7 +50,7 @@
       <li><a href="404">Environmental insertion of infrastructures</a></li>
       <li><a href="404">Architecture</a></li>
     </ul>
-    <a href="404">Contact</a>
+    <a href="contact">Contact</a>
   </div>
 </header>
 
@@ -69,7 +69,7 @@
       <a href="404">Architecture</a>
     </div>
   </div>
-  <a href="404">Contact</a>
+  <a href="contact">Contact</a>
   <div class="lang-switch" id="LS2">
     <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="../it/privacy">IT</a>
@@ -83,8 +83,8 @@
   <p>&#x263D;</p>
 </div>
 
-<main>
-  <section class="mono-404">
+<main class="direct-content">
+  <section class="mono">
     <div class="text-elements">
       <h1>Privacy and Cookie Policy</h1>
       <h2>Information</h2>
