--- a/it/404.html
+++ b/it/404.html
@@ -50,7 +50,7 @@
       <li><a href="404">Inserimento ambientale di infrastrutture</a></li>
       <li><a href="404">Architettura</a></li>
     </ul>
-    <a href="404">Contatti</a>
+    <a href="contatti">Contatti</a>
   </div>
 </header>
 
@@ -69,7 +69,7 @@
       <a href="404">Architettura</a>
     </div>
   </div>
-  <a href="404">Contatti</a>
+  <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
     <a href="../en/404">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
@@ -83,8 +83,8 @@
   <p>&#x263D;</p>
 </div>
 
-<main>
-  <section class="mono-404">
+<main class="direct-content">
+  <section class="mono">
     <div class="text-elements">
       <h1>404 Page not found</h1>
       <div class="big-separator"></div>
